[package]
name = "orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", default-features = false, features = [ "rt", "macros" ] }
#As app is only used in container we can easily use rustls for better performance
reqwest = { version = "0.12.15", default-features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0.219", default-features = false, features = [ "serde_derive" ] }
serde_json = "1"
config = { version = "0.15.11", default-features = false, features = [ "toml" ] }
#As app is only used in container we can easily use rustls for better performance
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
futures = { version = "0.3", default-features = false }
anyhow = "1.0.97"
